[gd_scene load_steps=10 format=3 uid="uid://dgtydc6q45t03"]

[ext_resource type="Script" path="res://assets/scripts/MainMenu.gd" id="1_puvtr"]
[ext_resource type="PackedScene" uid="uid://b8a5xn1xs1muv" path="res://assets/scenes/Settings.tscn" id="2_0l4lb"]
[ext_resource type="Texture2D" uid="uid://ujhb7sl52bcs" path="res://assets/sprites/start.png" id="3_8c5lk"]
[ext_resource type="Texture2D" uid="uid://c1u5pncjxs843" path="res://assets/sprites/TitleMaybeOuterGLow.png" id="4_1y2e8"]
[ext_resource type="Texture2D" uid="uid://bvvj3vcivsj0q" path="res://assets/sprites/doresagu menu image.png" id="4_m03nt"]
[ext_resource type="Texture2D" uid="uid://cvqhbu60bborh" path="res://assets/sprites/Howtoplay.png" id="4_w5387"]
[ext_resource type="Texture2D" uid="uid://c7y0ogg8h3ddi" path="res://assets/sprites/settings.png" id="5_6lgs8"]
[ext_resource type="Texture2D" uid="uid://drnm2bqmwf54p" path="res://assets/sprites/Quit.png" id="6_5ys5y"]
[ext_resource type="Texture2D" uid="uid://d5hljv408qf1" path="res://assets/sprites/HazeBorder.png" id="9_ycr4t"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_puvtr")

[node name="DoresaguMenuImage" type="Sprite2D" parent="."]
position = Vector2(959, 616)
texture = ExtResource("4_m03nt")

[node name="CenterContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2

[node name="Settings" parent="." instance=ExtResource("2_0l4lb")]
visible = false

[node name="TitleMaybeOuterGLow" type="Sprite2D" parent="."]
position = Vector2(1017, 264)
texture = ExtResource("4_1y2e8")

[node name="HazeBorder" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("9_ycr4t")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -249.0
offset_top = -295.0
offset_right = 249.0
offset_bottom = 295.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 400

[node name="Control" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -40
alignment = 1

[node name="Start" type="Button" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_colors/icon_hover_color = Color(0.780392, 0.780392, 0.780392, 1)
icon = ExtResource("3_8c5lk")
flat = true
icon_alignment = 1

[node name="Tutorial" type="Button" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_colors/icon_hover_color = Color(0.780392, 0.780392, 0.780392, 1)
theme_override_font_sizes/font_size = 50
icon = ExtResource("4_w5387")
flat = true
icon_alignment = 1

[node name="Settings" type="Button" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_colors/icon_hover_color = Color(0.780392, 0.780392, 0.780392, 1)
theme_override_font_sizes/font_size = 50
icon = ExtResource("5_6lgs8")
flat = true
icon_alignment = 1

[node name="Quit" type="Button" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_colors/icon_hover_color = Color(0.780392, 0.780392, 0.780392, 1)
theme_override_font_sizes/font_size = 50
icon = ExtResource("6_5ys5y")
flat = true
icon_alignment = 1

[node name="PopupPanel" type="PopupPanel" parent="."]
initial_position = 1
size = Vector2i(500, 500)

[node name="RichTextLabel" type="RichTextLabel" parent="PopupPanel"]
offset_left = 4.0
offset_top = 4.0
offset_right = 496.0
offset_bottom = 496.0
text = "HOW TO PLAY

In Picross, hints are given above and to the left of the board that tell you where the numbers go.
Each hint will tell you how many filled-in blocks are in a row. For example, and \"8\" means you have 8 blocks in a row, somewhere in that row/column.
If there are multiple hints, those groups of blocks appear in the order of the hints. For example, \"5 6\" means you have a group of five, THEN a group of six.
Cross out blocks that you know aren't filled, and fill in every correct block in order to win!


Use M to swap between Keyboard Only (default) and Keyboard And Mouse controls.
In Keyboard Only, use WASD or the arrow keys to move your cursor, and press Z to fill in a block, and press X to cross it out if you know for sure it isn't filled.
In Keyboard and Mouse, hold Z to have your clicks fill in blocks and X to have your clicks cross out blocks."

[connection signal="button_down" from="VBoxContainer/VBoxContainer/Start" to="." method="_on_start_button_down"]
[connection signal="button_down" from="VBoxContainer/VBoxContainer/Tutorial" to="." method="_on_tutorial_button_down"]
[connection signal="button_down" from="VBoxContainer/VBoxContainer/Settings" to="." method="_on_settings_button_down"]
[connection signal="button_down" from="VBoxContainer/VBoxContainer/Quit" to="." method="_on_quit_button_down"]
